WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275855
[WGSL] Compound assignments incorrectly (un)pack the assignee
https://bugs.webkit.org/show_bug.cgi?id=275855
Summary
[WGSL] Compound assignments incorrectly (un)pack the assignee
Tadeu Zagallo
Reported
2024-06-25 08:26:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-06-25 08:26:11 PDT
<
rdar://problem/130082002
>
Tadeu Zagallo
Comment 2
2024-06-25 08:28:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30151
EWS
Comment 3
2024-06-26 06:47:44 PDT
Committed
280371@main
(c49e508c6e3f): <
https://commits.webkit.org/280371@main
> Reviewed commits have been landed. Closing PR #30151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug