[WGSL] Compound assignments incorrectly (un)pack the assignee https://bugs.webkit.org/show_bug.cgi?id=275855 rdar://130082002

Reviewed by Mike Wyrzykowski.

The default behavior in the global rewriter is that all expressions get unpack,
any exceptions need to be handled manually, as we do for assignments. However,
the rewriter was missing an entry for compound assignments (e.g. x += y).

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::visit):
* Source/WebGPU/WGSL/tests/valid/fuzz-130082002.wgsl: Added.

Canonical link: https://commits.webkit.org/280371@main